--- a/排球系统参数.md
+++ b/排球系统参数.md
@@ -2,20 +2,52 @@
 
 ### 排球系统实现细则——1.0版本：
 
+侧面和正面注意区分。之后考虑：判断这个人处于正面和侧面？
+
 先实现单人垫球和双人垫球
 
 1. 垫球
 
-上肢动作：击球部位（小臂中部、前臂、手腕等）、接球时手臂角度、接球部位（同接球部位）、击球时手臂角度
+（关键帧）上肢动作：击球部位（小臂中部、前臂、手腕等）、接球时手臂角度、接球部位（同接球部位）、**击球时手臂角度**
 
 下肢动作：小腿与地面弯曲角度、大小腿弯曲角度（建议是浅蹲）
 
-球的参数：最高高度、传球距离、初速度的水平倾角
+膝关节（大小腿）弯曲角度、手臂弯曲角度
 
-固定参数：人的身高、两人间隔（暂时不用）
+球的参数：最高高度（定义为到脚的距离）、传球距离、初速度的水平倾角
+
+--- 固定参数：人的身高、两人间隔（暂时不用）
 
 
 
 ### 排球系统2.0版本
 
 实现两人传球训练，暂时先占位，等1.0版本实现之后再详细描述
+
+
+
+
+
+注重讲一个故事
+
+1.算法：显示结果更加直观，让非专业人员也能看懂；符合排球训练的要求
+
+2.前端界面，完成排球训练系统的管理网站
+
+3.报告
+
+挑战杯、大创等能不能同步参加？
+
+
+
+
+
+1、从视频中截取出关键的接球点出现的帧，选取出来
+
+班级、单人方面的统计数据
+
+2、连续垫球次数——》平均值、最高值
+
+两次垫球之间的间隔
+
+击球高度
