--- a/排球系统参数.md
+++ b/排球系统参数.md
@@ -8,7 +8,9 @@
 
 1. 垫球
 
-（关键帧）上肢动作：击球部位（小臂中部、前臂、手腕等）、接球时手臂角度、接球部位（同接球部位）、**击球时手臂角度**
+（捕获了击球的关键帧）
+
+上肢动作：击球部位（小臂中部、前臂、手腕等）、接球时手臂角度、接球部位（同接球部位）、**击球时手臂角度**
 
 下肢动作：小腿与地面弯曲角度、大小腿弯曲角度（建议是浅蹲）
 
@@ -17,6 +19,19 @@
 球的参数：最高高度（定义为到脚的距离）、传球距离、初速度的水平倾角
 
 --- 固定参数：人的身高、两人间隔（暂时不用）
+
+
+
+1. 击球部位、击球的关键帧
+2. 角度类：接球时手臂角度、击球时手臂角度、小腿与地面弯曲角度、大小腿弯曲角度、膝关节（大小腿）弯曲角度、手臂弯曲角度
+3. 球运行过程中的信息：球的位置、球的速度、球的高度、球的飞行角度、（球的轨迹？）
+4. 上述参数在视频或者图片中的可视化描述。
+5. 生成一下击球的评价和建议。（根据数据和击球的过程）
+6. 动态建模，可以点击互动
+7. 制造规则进行评分 吕佳洵
+8. 对一个视频的综合评判 我
+
+有些时刻，detectron2并不能识别出球（原因可能是球速过快导致模糊），根据排球空中运行轨迹近似呈抛物线的规律，可以考虑采用拟合的方法估计球的位置。
 
 
 
