ball_flight修改，debug，添加表示速度方向的箭头

--- a/排球系统参数.md
+++ b/排球系统参数.md
@@ -31,6 +31,10 @@
 7. 制造规则进行评分 吕佳洵
 8. 对一个视频的综合评判 我
 
+
+
+新的：接球时球的飞行方向与小臂的夹角——已存在
+
 有些时刻，detectron2并不能识别出球（原因可能是球速过快导致模糊），根据排球空中运行轨迹近似呈抛物线的规律，可以考虑采用拟合的方法估计球的位置。
 
 
